<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple"
    android:padding="16dp"
    tools:context=".ui.UserActivity">

    <TextView
        android:id="@+id/text_lest"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/cabin"
        android:textSize="30sp"
        android:text="@string/lets_begin"/>

    <EditText
        android:id="@+id/edit_your_name"
        android:hint="@string/your_name"
        android:textColorHint="@color/white"
        android:layout_centerInParent="true"
        android:textColor="@color/white"
        android:gravity="center_horizontal"
        android:fontFamily="@font/cabin"
        android:textSize="22sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:fontFamily="@font/cabin"
        android:textSize="20sp"
        android:backgroundTint="@color/light_purple"
        android:text="@string/save"/>

        
        
</RelativeLayout>