<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/linear_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:background="@color/purple"
        android:paddingTop="16dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="16dp">


    <ImageView
        android:id="@+id/image_inclusive"
        android:src="@drawable/ic_all_inclusive"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1" />

    <ImageView
        android:id="@+id/image_happy"
        android:src="@drawable/ic_face_happy"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        />

    <ImageView
        android:id="@+id/image_sunny"
        android:src="@drawable/ic_sunny"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        />

</LinearLayout>


    <TextView
        android:id="@+id/text_phrase1"
        android:layout_below="@id/linear_menu"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:fontFamily="@font/cabin"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/user"/>


    <TextView
        android:id="@+id/text_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/app_name"
        android:textSize="22sp" />

    <View
        android:layout_below="@id/text_phrase"
        android:layout_width="128dp"
        android:layout_height="3dp"
        android:layout_centerInParent="true"
        android:background="@color/dark_purple"
        android:elevation="5dp"/>
    
    <Button
        android:id="@+id/button_New_Phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_phrase"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/dark_purple"
        android:textColor="@color/white"
        android:fontFamily="@font/cabin"/>




</RelativeLayout>